name:                blossum
version:             0.1.0.0
synopsis:            BLOSUM matrix generator with the addition of special serine
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/blossum#readme
license:             GPL-2
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gregory.schwartz@drexel.edu
copyright:           Copyright 2016 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Utility
                     , Cluster
                     , Matrix
                     , Print
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , text-show
                     , fasta
                     , lens
  default-language:    Haskell2010

executable blossum
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blossum
                     , containers
                     , fasta
                     , text
                     , split
                     , pipes
                     , pipes-text
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/blossum
